--- a/vignettes/dp-mean.Rmd
+++ b/vignettes/dp-mean.Rmd
@@ -29,30 +29,38 @@ Differential privacy is a rigorous mathematical framework for making statistical
 
 The privacy loss parameter `epsilon` is chosen by the user and represents the degree of privacy preservation guaranteed to each observation in the data when releasing information. Typically this is valued between 0 and 1; as the value gets smaller, the level of privacy protection grows. However, greater privacy protection means more noise must be added to the true mean to achieve the desired amount of privacy. Therefore, as epsilon grows smaller, the privacy protection becomes greater, but the accuracy of the statistical release becomes weaker.
 
-It is noteworthy the user must manually specify the number of observations, variable type, and range of the data of interest; data will only be touched at the point the estimate to be released is actually computed, and only by the function computing that estimate. This structure decreases the possibility of an unauthorized release of information. Additional parameter specification includes the desired `epsilon` value and post-processing steps the user would like to perform on the released statistic. 
+There is an additional definition of differential privacy known as `epsilon-delta` differential privacy. The additional privacy loss parameter `delta` is chosen by the user and represents how likely the privacy loss for a given dataset is more than epsilon. In other words, `delta` is the chance that additional privacy loss beyond `epsilon` occurs. This value should be very small, on the order of `2^-30`, and never greater than `1/n^2` (where n is the size of the database). Similar to `epsilon`, as the value of `delta` grows smaller, the level of privacy increases, but the accuracy decreases.
+
+The user must manually specify the number of observations, variable type, and range of the data of interest. 
 -->
 
 Syntax
 ------
 
 ```{r, eval = FALSE}
+library(PSIlence)
+
 x1 <- c(3, 12, 20, 42, 33, 65, 70, 54, 33, 45)
 x2 <- c(TRUE, FALSE, FALSE, TRUE, FALSE, TRUE, TRUE, TRUE, FALSE, TRUE)
 data <- data.frame(x1, x2)
 
+# numeric variable
 dpMeanExample <- dpMean$new(mechanism='mechanismLaplace', varType='numeric', 
                       variable='x1', epsilon=0.1, n=10, rng=c(0, 70))
 dpMeanExample$release(data)
+print(dpMeanExample$result)
 
+# logical variable
 dpMeanExample2 <- dpMean$new(mechanism='mechanismLaplace', varType='logical', 
                        variable='x2', epsilon=0.1, n=10, rng=c(0, 1))
 dpMeanExample2$release(data)
+print(dpMeanExample2$result)
 ```
 
 Arguments
 ---------
 
-In typical usage, there are two methods to the `dpMean` class. The `new` method, which creates an object of the class, accepts the following arguments.
+In typical usage, there are two methods to the `dpMean` class: the `new` method and the `release` method. The `new` method creates an object of the class and accepts the following arguments:
 
 * `mechanism` \ Character, the class name of the mechanism used to perturb the true estimate, one of `'mechanismLaplace'` or `'mechanismBootstrap'`.
 
@@ -68,7 +76,9 @@ In typical usage, there are two methods to the `dpMean` class. The `new` method,
 
 * `accuracy` \ Numeric, the accuracy of the query. Optional, default `NULL`. If `NULL`, the user must specify a value for `epsilon`. If `epsilon` is not `NULL`, this value is ignored and evaluated internally.
 
-* `imputeRng` \ Numeric, a 2-tuple giving a range within which missing values of the vector are imputed. Optional, default `NULL`. If `NULL`, missing values are imputed using the range provided in `rng`.
+* `rng` \ Numeric, a 2-tuple with the lower and upper bounds of the data. In other words, it should be a vector in the form: c(data minimum, data maximum).
+
+* `imputeRng` \ Numeric, a 2-tuple giving a range within which missing values of the vector are imputed. Optional, default `NULL`. If `NULL`, missing values are imputed using the range provided in `rng`. See Notes below for more information.
 
 * `nBoot` \ Integer, the number of bootstrap replications to perform. Optional, default `NULL`. If not `NULL`, the privacy cost `epsilon` is partitioned across `nBoot` replications and the estimates for each are returned.
 
@@ -76,7 +86,7 @@ In typical usage, there are two methods to the `dpMean` class. The `new` method,
 
 &nbsp; 
 
-The `release` method accepts a single argument. 
+The `release` method calculates the mean of given data and accepts a single argument:
 
 * `data` \ Data frame containing numeric columns corresponding the name specified in `variable`.
 
@@ -84,31 +94,41 @@ The `release` method accepts a single argument.
 Examples
 ------
 
-Attach the sample dataset. 
+Import the PSIlence library and the datasets library, and attach the sample datasets. The `library(datasets)` command is just for the examples in this document:
 
 ```{r, eval = TRUE}
 library(PSIlence)
+library(datasets)
 data(PUMS5extract10000)
+data(SocrataWhiteHouseEmployeeSalaries)
+data(esoph)
 ```
 
 &nbsp;
 
-Calculate a private mean of a numeric vector with `dpMean` using the Laplace mechanism:
+__Numeric Example__
+
+To calculate a private histogram of a numeric vector with `dpHistogram`, enter the mechanism (this will be the Laplace Mechanism, or 'mechanismLaplace'), the variable type ('numeric'), the variable of interest (the column name of the variable in the dataframe), the number of observations in the dataframe, the epsilon value (generally less than 1), and the range:
 
 ```{r}
+# create the mean statistic object
 numericMean <- dpMean$new(mechanism='mechanismLaplace', varType='numeric', 
                            variable='income', n=10000, epsilon=0.1, rng=c(0, 750000))
+# calculate the statistic for the given data, in this case the PUMS5extract10000 dataset
 numericMean$release(PUMS5extract10000)
+# print the result
 print(numericMean$result)
 ```
 
 &nbsp;
 
-To calculate the mean of a logical vector instead, input a logical vector into `x` and update `varType` and `rng` appropriately:
+__Logical Example__
+
+To calculate the histogram of a logical variable, input a the name of a logical vector into `variable` and update `varType` to 'logical'. Note: you do not need to enter a range for a logical variable (because the range is known to be c(0,1)).
 
 ```{r}
 logicalMean <- dpMean$new(mechanism='mechanismLaplace', varType='logical', 
-                           variable='married', n=10000, epsilon=0.1, rng=c(0, 1))
+                           variable='married', n=10000, epsilon=0.1)
 
 logicalMean$release(PUMS5extract10000)
 print(logicalMean$result)
@@ -121,13 +141,14 @@ Values
 
 The `release` method makes a call to the mechanism, which generates a list of statistical summaries available on the `result` field.
 
-* `result` List, contains the accuracy guarantee, privacy cost, and private release. Other elements reflecting variable post-processing of the release.
+* `result` List, contains the accuracy guarantee, privacy cost, and private release. It also contains other elements reflecting variable post-processing of the release.
 
 &nbsp; 
 
-The list in the `result` attribute has the following values.
+The list in the `result` attribute has the following values:
 
-* `release` \ Differentially private estimate of the mean. If the bootstrap mechanism is used, one estimate for each bootstrap replication is provided (i.e., vector of length `nBoot`).
+* `release` \ Differentially private estimate of the mean. If the bootstrap mechanism is used, one estimate for each bootstrap replication is provided (i.e. vector of length `nBoot`).
+* `variable` \ The variable (or the column of the dataframe) for which the mean was calculated.
 * `accuracy` \ The accuracy guarantee of the release given `epsilon`.
 * `epsilon` \ The privacy cost required to guarantee `accuracy`.
 * `interval` \ Confidence interval of the private estimate given `accuracy`.
@@ -135,3 +156,9 @@ The list in the `result` attribute has the following values.
 * `median` \ The median of the vector. Only available for logical vectors.
 * `histogram` \ The histogram of the vector. Only available for logical vectors.
 * `std.error` \ Estimates of the standard error of the mean. Only available when the bootstrap mechanism is used.
+
+&nbsp;
+
+Notes
+------
+* For the `imputeRng` argument, the imputation strategy is to use a Uniform distribution to choose any value in the imputation range with equal probability.
