--- a/vignettes/dp-mean.Rmd
+++ b/vignettes/dp-mean.Rmd
@@ -25,28 +25,34 @@ Differentially Private Mean with `dpMean`
 The `dpMean` class evaluates a privacy-preserving mean of a vector of values. The class supports any vector type that can be represented numerically, meaning that it can handle the R types `numeric`, `integer`, and `logical`.
 
 <!--
-Differential privacy is a rigorous mathematical framework for making statistical information about private datasets available. This is done in such a way that guarantees that information about specific individuals in the dataset does not leak out. Differentially private estimates of various statistics are available in this package.  For example, the `mean.release()` function releases a mean of a variable, while adding a precise about of noise to guarantee `epsilon` differential privacy. 
+Differential privacy is a rigorous mathematical framework for making statistical information about private datasets available. This is done in such a way that guarantees that information about specific individuals in the dataset does not leak out. Differentially private estimates of various statistics are available in this package.  For example, the `mean.release()` function releases a mean of a variable, while adding a precise about of noise to guarantee `epsilon` differential privacy.
 
 The privacy loss parameter `epsilon` is chosen by the user and represents the degree of privacy preservation guaranteed to each observation in the data when releasing information. Typically this is valued between 0 and 1; as the value gets smaller, the level of privacy protection grows. However, greater privacy protection means more noise must be added to the true mean to achieve the desired amount of privacy. Therefore, as epsilon grows smaller, the privacy protection becomes greater, but the accuracy of the statistical release becomes weaker.
 
-It is noteworthy the user must manually specify the number of observations, variable type, and range of the data of interest; data will only be touched at the point the estimate to be released is actually computed, and only by the function computing that estimate. This structure decreases the possibility of an unauthorized release of information. Additional parameter specification includes the desired `epsilon` value and post-processing steps the user would like to perform on the released statistic. 
+It is noteworthy the user must manually specify the number of observations, variable type, and range of the data of interest; data will only be touched at the point the estimate to be released is actually computed, and only by the function computing that estimate. This structure decreases the possibility of an unauthorized release of information. Additional parameter specification includes the desired `epsilon` value and post-processing steps the user would like to perform on the released statistic.
 -->
 
 Syntax
 ------
 
 ```{r, eval = FALSE}
-x1 <- c(3, 12, 20, 42, 33, 65, 70, 54, 33, 45)
-x2 <- c(TRUE, FALSE, FALSE, TRUE, FALSE, TRUE, TRUE, TRUE)
-data <- data.frame(x1, x2)
+data(PUMS5extract10000)
 
-dp.mean <- dpMean$new(mechanism='mechanismLaplace', var.type='numeric', 
-                      variable='x1', epsilon=0.1, n=10, rng=c(0, 70))
-dp.mean$release(data)
+dp.mean <- dpMean$new(mechanism='mechanismLaplace', var.type='numeric',
+                      variable='income', epsilon=0.1, n=nrow(PUMS5extract10000), rng=c(0, 200000))
+dp.mean$release(PUMS5extract10000)
 
-dp.mean2 <- dpMean$new(mechanism='mechanismLaplace', var.type='logical', 
-                       variable='x2', epsilon=0.1, n=10, rng=c(0, 1))
-dp.mean2$release(data)
+dp.mean2 <- dpMean$new(mechanism='mechanismSnapping', var.type='numeric',
+                      variable='income', epsilon=0.1, n=nrow(PUMS5extract10000), rng=c(0, 200000))
+dp.mean2$release(PUMS5extract10000)
+
+dp.mean3 <- dpMean$new(mechanism='mechanismLaplace', var.type='logical',
+                       variable='sex', epsilon=0.1, n=nrow(PUMS5extract10000), rng=c(0, 1))
+dp.mean3$release(PUMS5extract10000)
+
+dp.mean4 <- dpMean$new(mechanism='mechanismSnapping', var.type='logical',
+                       variable='sex', epsilon=0.1, n=nrow(PUMS5extract10000), rng=c(0, 1))
+dp.mean4$release(PUMS5extract10000)
 ```
 
 Arguments
@@ -72,9 +78,9 @@ In typical usage, there are two methods to the `dpGLM` class. The `new` method, 
 
 * `alpha` \ Numeric, the statistical significance level used in evaluating accuracy and privacy parameters. If the bootstrap is employed, `alpha` is also used to trim the release. Default `0.05`.
 
-&nbsp; 
+&nbsp;
 
-The `release` method accepts a single argument. 
+The `release` method accepts a single argument.
 
 * `x` \ Data frame containing numeric columns corresponding the names specified in `formula`.
 
@@ -82,7 +88,7 @@ The `release` method accepts a single argument.
 Examples
 ------
 
-Attach the sample dataset. 
+Attach the sample dataset.
 
 ```{r, eval = TRUE}
 library(PSIlence)
@@ -94,7 +100,7 @@ data(PUMS5extract10000)
 Calculate a private mean of a numeric vector with `dpMean` using the Laplace mechanism:
 
 ```{r}
-numeric_mean <- dpMean$new(mechanism='mechanismLaplace', var.type='numeric', 
+numeric_mean <- dpMean$new(mechanism='mechanismLaplace', var.type='numeric',
                            variable='income', n=10000, epsilon=0.1, rng=c(0, 750000))
 numeric_mean$release(PUMS5extract10000)
 print(numeric_mean$result)
@@ -105,7 +111,7 @@ print(numeric_mean$result)
 To calculate the mean of a logical vector instead, input a logical vector into `x` and update `var.type` and `rng` appropriately:
 
 ```{r}
-logical_mean <- dpMean$new(mechanism='mechanismLaplace', var.type='logical', 
+logical_mean <- dpMean$new(mechanism='mechanismLaplace', var.type='logical',
                            variable='married', n=10000, epsilon=0.1, rng=c(0, 1))
 logical_mean$release(PUMS5extract10000)
 print(logical_mean$result)
@@ -118,7 +124,7 @@ The `release` method makes a call to the mechanism, which generates a list of st
 
 * `result` List, contains the accuracy guarantee, privacy cost, and private release. Other elements reflecting variable post-processing of the release.
 
-&nbsp; 
+&nbsp;
 
 The list in the `result` attribute has the following values.
 
